--- a/flower.html
+++ b/flower.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flower-shop</title>
+    <!-- favicon  -->
+
+    <link rel="icon" href="./Flower Asset/Flower 01.png">
 
     <!-- css connection -->
     <link rel="stylesheet" href="./flower.css">
