--- a/flower.html
+++ b/flower.html
@@ -36,7 +36,6 @@
 
     <main class="max-width">
 
-
         <!-- flower section start here -->
         <section>
             <div class="sheared-section-title">
@@ -151,19 +150,27 @@
                     <p class="latest-deal-desc">$30 coupon for first shopping</p>
 
                     <div class="latest-input-filed flex">
-                    <input type="text" placeholder="Enter your email here....">
-                    <button class="btn">Subscribe</button>
+                        <input type="text" placeholder="Enter your email here....">
+                        <button class="btn">Subscribe</button>
+                    </div>
                 </div>
-                </div>    
 
             </div>
 
         </section>
 
-
-
     </main>
 
+    <footer class="footer">
+        <div class="footer-desc">
+            <h1><span class="footer-flower">Flower</span>Shop</h1>
+            <p>It is a long established fact that a reader will be distracted by the readable content of a page when
+                looking at its layout.</p>
+
+                <small class="footer-reserve">@2025-2026, FlowerShop.com. All rights reserved. </small>
+        </div>
+
+    </footer>
 
 
 </body>
